first commit with basic functionality

--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -1,6 +1,10 @@
 ---
 title: Home
 ---
-<h2>Page Content Goes in the <code>src/templates/pages/</code> directory</h2>
-
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ea sunt iste enim illo dolore itaque repellat nobis numquam, nihil dignissimos, quis, quasi minima fugiat explicabo dolores aspernatur, magnam rerum!
+<div class="slider-wrapper">
+	<div class="slipnslider">
+	  <figure><img draggable="false" src="http://fillmurray.com/500/500" /></figure>
+	  <figure><img draggable="false" src="http://fillmurray.com/500/500" /></figure>
+	  <figure><img draggable="false" src="http://fillmurray.com/500/500" /></figure>
+	</div>
+</div>
