added styles and centers slides when not dragged enough

--- a/src/assets/scss/components/slipnslider/slipnslider.scss
+++ b/src/assets/scss/components/slipnslider/slipnslider.scss
@@ -1,13 +1,25 @@
+// Custom styles
 .slider-wrapper {
   width: 80%;
   max-width: 600px;
   margin: 0 auto;
 }
 
+.slipnslider {
+  padding-bottom: 40px;
+}
+
+.slipnslider img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+  width: 100%;
+}
+
 
 /***********************************
 
-	SlipnSlider vendor styles
+  SlipnSlider vendor styles
 
 ***********************************/
 
@@ -16,13 +28,16 @@
   overflow: hidden;
   width: 100%;
   position: relative;
-  padding-bottom: 40px;
 }
 
 .slipnslider__stage {
   position: relative;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
+  cursor: -webkit-grab;
+  cursor: -o-grab;
+  cursor: -ms-grab;
+  cursor: grab;
 }
 
 .slipnslider__stage > * {
@@ -30,17 +45,28 @@
   height: auto;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+  -webkit-tap-highlight-color: transparent;
   user-select: none;
   -moz-user-select: none;
-  -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  -webkit-user-drag: none;
 }
 
-.slipnslider img {
-  display: block;
-  height: auto;
-  max-width: 100%;
+.slipnslider__controls .slipnslider__prev,
+.slipnslider__controls .slipnslider__next,
+.slipnslider__dot-nav > * {
+  cursor: pointer;
+  cursor: hand;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .slipnslider__controls {
@@ -51,7 +77,7 @@
 }
 
 .slipnslider__dot-nav {
-  display: inline-block;
+  display: block;
   position: absolute;
   left: 0;
   padding: 0;
@@ -66,9 +92,20 @@
   height: 12px;
   margin: 2px;
   width: 12px;
+  vertical-align: middle;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
 }
 
 .slipnslider__dot-nav li.slipnslider__active {
   background: #000;
+  width: 14px;
+  height: 14px;
+}
+
+.no-js .slipnslider__stage,
+.no-js .slipnslider__stage > * {
+  width: 100% !important;
+  max-width: 100% !important;
+  display: block;
 }
