added ability to have padding between slides

--- a/src/assets/scss/components/slipnslider/_slipnslider.scss
+++ b/src/assets/scss/components/slipnslider/_slipnslider.scss
@@ -3,6 +3,7 @@
   width: 80%;
   max-width: 600px;
   margin: 0 auto;
+  border: 1px solid #aaa;
 }
 
 .slipnslider {
@@ -44,7 +45,6 @@
   display: inline-block;
   height: auto;
   margin: 0;
-  padding: 0;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -webkit-backface-visibility: hidden;
@@ -54,6 +54,10 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   -webkit-user-drag: none;
+}
+
+.slipnslider__stage > *:first-child {
+  margin-left: 0 !important;
 }
 
 .slipnslider__controls .slipnslider__prev,
