--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -23,6 +23,6 @@ title: Slip'nSlider
 		<option value="false">has no controls</option>
 	</select>
 	<label for="slide-padding">Space between slides</label>
-	<input id="slide-padding" class="js-slidePadding" type="number" />
+	<input id="slide-padding" class="js-slidePadding" type="number" value="10"/>
 	<input type="submit" value="Update Slip'n Slider" />
 </form>
