changed to differnet photos

--- a/src/assets/scss/components/slipnslider/_slipnslider.scss
+++ b/src/assets/scss/components/slipnslider/_slipnslider.scss
@@ -45,6 +45,7 @@
   display: inline-block;
   height: auto;
   margin: 0;
+  vertical-align: middle;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -webkit-backface-visibility: hidden;
