--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -1,28 +1,4 @@
 ---
 title: Slip'nSlider
 ---
-<div class="slider-wrapper">
-	<div class="slipnslider">
-	  <figure><img draggable="false" src="http://fillmurray.com/500/500" /></figure>
-	  <figure><img draggable="false" src="http://fillmurray.com/500/400" /></figure>
-	  <figure><img draggable="false" src="http://fillmurray.com/500/600" /></figure>
-	</div>
-</div>
-
-<form class="slider-form js-sliderForm" onsubmit="return false;">
-	<select class="js-isInfinite">
-		<option value="true">is infinite</option>
-		<option value="false" selected>is not infinite</option>
-	</select>
-	<select class="js-hasDotNav">
-		<option value="true">has dots</option>
-		<option value="false">has no dots</option>
-	</select>
-	<select class="js-hasControls">
-		<option value="true">has controls</option>
-		<option value="false">has no controls</option>
-	</select>
-	<label for="slide-padding">Space between slides</label>
-	<input id="slide-padding" class="js-slidePadding" type="number" value="10"/>
-	<input type="submit" value="Update Slip'n Slider" />
-</form>
+{{>slipnslider}}
