wip kind of working not infinite

--- a/src/assets/scss/components/slipnslider/_slipnslider.scss
+++ b/src/assets/scss/components/slipnslider/_slipnslider.scss
@@ -25,13 +25,13 @@
 ***********************************/
 
 .slipnslider {
-  font-size: 0;
   overflow: hidden;
   width: 100%;
   position: relative;
 }
 
 .slipnslider__stage {
+  font-size: 0;
   position: relative;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
@@ -43,6 +43,7 @@
 
 .slipnslider__stage > * {
   display: inline-block;
+  font-size: initial;
   height: auto;
   margin: 0;
   vertical-align: middle;
@@ -87,7 +88,7 @@
   left: 0;
   padding: 0;
   width: 100%;
-  bottom: 15px;
+  bottom: 0;
   text-align: center;
 }
 
