--- a/src/templates/partials/modules/slipnslider.hbs
+++ b/src/templates/partials/modules/slipnslider.hbs
@@ -19,7 +19,7 @@
 		<option value="true">has controls</option>
 		<option value="false">has no controls</option>
 	</select>
-	<label for="slide-padding">Space between slides</label>
+	<label for="slide-padding">Space between slides (px)</label>
 	<input id="slide-padding" class="js-slidePadding" type="number" value="10"/>
 	<input type="submit" value="Update Slip'n Slider" />
 </form>
