multiple slides and navigating works sans infinite mode

--- a/src/templates/partials/modules/slipnslider.hbs
+++ b/src/templates/partials/modules/slipnslider.hbs
@@ -3,6 +3,7 @@
 	  <figure><img draggable="false" src="http://fillmurray.com/500/500" /></figure>
 	  <figure><img draggable="false" src="http://fillmurray.com/500/400" /></figure>
 	  <figure><img draggable="false" src="http://fillmurray.com/500/600" /></figure>
+	  <figure><img draggable="false" src="http://fillmurray.com/500/450" /></figure>
 	</div>
 </div>
 
