--- a/src/templates/partials/modules/slipnslider.hbs
+++ b/src/templates/partials/modules/slipnslider.hbs
@@ -10,7 +10,7 @@
 <form class="slider-form js-sliderForm" onsubmit="return false;">
 	<select class="js-isInfinite">
 		<option value="true">is infinite</option>
-		<option value="false" selected>is not infinite</option>
+		<option value="false">is not infinite</option>
 	</select>
 	<select class="js-hasDotNav">
 		<option value="true">has dots</option>
@@ -22,5 +22,7 @@
 	</select>
 	<label for="slide-padding">Space between slides (px)</label>
 	<input id="slide-padding" class="js-slidePadding" type="number" value="10"/>
+	<label for="slides-per-page">Slides per page</label>
+	<input id="slides-per-page" type="numer" class="js-slidesPerPage" value="2" />
 	<input type="submit" value="Update Slip'n Slider" />
 </form>
