adjusted styles for form

--- a/src/assets/scss/_small.scss
+++ b/src/assets/scss/_small.scss
@@ -1,3 +1,4 @@
 // Components
 @import "components/slipnslider/slipnslider";
 @import "components/slider-form/slider-form";
+@import "components/col/col";
