--- a/src/assets/scss/components/slider-form/_slider-form.scss
+++ b/src/assets/scss/components/slider-form/_slider-form.scss
@@ -4,6 +4,7 @@
   border: 2px solid #a82bde;
   padding: 30px 15px;
   border-radius: 40px;
+  box-shadow: 6px 6px 10px -3px #000;
 }
 
 .slider-form select {
