added small error handling on initialization

--- a/src/templates/partials/modules/slipnslider.hbs
+++ b/src/templates/partials/modules/slipnslider.hbs
@@ -1,5 +1,5 @@
 <div class="slider-wrapper">
-	<div class="slipnslider">
+	<div class="slipnslidr">
 	  <figure><img draggable="false" src="http://fillmurray.com/500/500" /></figure>
 	  <figure><img draggable="false" src="http://fillmurray.com/500/400" /></figure>
 	  <figure><img draggable="false" src="http://fillmurray.com/500/600" /></figure>
